Converts blog, newsroom, and the bureau to a new templating system.

--- a/newsroom/featured-topic.html
+++ b/newsroom/featured-topic.html
@@ -1,4 +1,7 @@
-{% for post in featured_topic %}
+
+{% macro render(featured_topics) %}
+
+{% for post in featured_topics %}
 
     <article class="featured-topic summary">
         <div class="fancy-slug">
@@ -32,3 +35,5 @@
     </article>
 
 {% endfor %}
+
+{% endmacro %}
