--- a/the-bureau/_vars-the-bureau.html
+++ b/the-bureau/_vars-the-bureau.html
@@ -1,6 +1,6 @@
-{% extends "nav-secondary.html" %}
 
-{% set navigation_bar = [
+{% set path = '/the-bureau/' %}
+{% set nav_items = [
     (path, 'index', 'The Bureau'),
     (path + 'about-rich-cordray/', 'about-rich-cordray', 'Director Cordray'),
     (path + 'about-steve-antonakes/', 'about-steve-antonakes', 'Deputy Director Antonakes'),
@@ -8,6 +8,3 @@
     (path + 'leadership-calendar/', 'leadership-calendar', 'Leadership Calendar'),
     (path + 'history/', 'history', 'History')
 ] -%}
-
-{% set active_page = active_page|default('index') -%}
-
