--- a/the-bureau/leadership-calendar/print/index.html
+++ b/the-bureau/leadership-calendar/print/index.html
@@ -19,7 +19,7 @@
 
 {% block body %}
 
-    {% import "post-macros.html" as post_macros with context %}
+    {% from "post-macros.html" import active_filters as active_filters with context %}
     {% import "leadership-calendar-table.html" as calendar %}
 
     <main class="content print" id="main" role="main">
@@ -29,7 +29,7 @@
                     {% set query = queries.calendar_event -%}
                     {%- set posts = query.search_with_url_arguments(size=20000) -%}
                     <h1 class="superheader">Leadership Calendar</h1>
-                    {{ post_macros.active_filters(posts, ['calendar', 'range_date'], {
+                    {{ active_filters(posts, ['calendar', 'range_date'], {
                         'show_filters_label': false, 'show_unfiltered_count': true
                     }) }}
                 </div>
