--- a/budget/_vars-budget.html
+++ b/budget/_vars-budget.html
@@ -1,12 +1,9 @@
-{% extends "nav-secondary.html" %}
 
-{% set navigation_bar = [
+{% set path = '/budget/' %}
+{% set nav_items = [
     (path, 'index', 'Budget and Strategy'),
     (path + 'strategic-plan/', 'strategic-plan', 'Strategic Plan'),
     (path + 'performance-plan-report/', 'performance-plan-report', 'Performance Plan Report'),
     (path + 'financial-report/', 'financial-report', 'Financial Report & Update'),
     (path + 'funding-request/', 'funding-request', 'Funding Request'),
 ] -%}
-
-{% set active_page = active_page|default('index') -%}
-
