--- a/budget/strategic-plan/index.html
+++ b/budget/strategic-plan/index.html
@@ -1,4 +1,6 @@
-{% extends "base.html" %}
+{% extends "layout-side-nav.html" %}
+{% import "_vars-budget.html" as vars with context %}
+{% set active_nav_id = 'strategic-plan' %}
 
 {% block title -%}
     Strategic Plan
@@ -8,60 +10,35 @@
     
 {%- endblock %}
 
+{% block content_main %}
 
-{% block content %}
+    <h1>
+        Strategic Plan
+    </h1>
+    <p class="h3">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit.
+    <p>
+    <div class="block block__sub">
+        <h2 class="h4">
+            CFPB Strategic Plan, Budget, and Performance Plan and Report
+        </h2>
+        <ul class="list list__horizontal">
+            <li class="list_item">
+                <a class="list_link icon-link icon-link__right" href="interactive/" target="_blank">
+                    <span class="icon-link_text">
+                        Interactive
+                    </span>
+                </a>
+            </li>
+            <li class="list_item">
+                <a class="list_link icon-link icon-link__pdf"
+                   href="http://files.consumerfinance.gov/f/strategic-plan.pdf">
+                    <span class="icon-link_text">
+                        PDF
+                    </span>
+                </a>
+            </li>
+        </ul>
+    </div>
 
-    {# Variables #}
-
-    {% set path = '/budget/' %}
-    {% set active_page = 'strategic-plan' %}
-
-    {# Macros #}
-
-    {% import "post-macros.html" as post_macros with context %}
-
-
-    <main class="content content__1-3" id="main" role="main">
-
-        <!-- .content_bar must come after .content_hero but before .content_wrapper -->
-        <div class="content_bar"></div>
-
-        <div class="wrapper content_wrapper">
-
-            <aside class="content_sidebar content__flush-bottom content__flush-all-on-small">
-                {% include "_budget-nav.html" %}
-            </aside>
-
-            <div class="content_main content__flush-top-on-small">
-                <section>
-                    <h1>
-                        Strategic Plan
-                    </h1>
-                    <p class="h3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit.<p>
-                    <div class="block block__sub">
-                        <h2 class="h4">
-                            CFPB Strategic Plan, Budget, and Performance Plan and Report
-                        </h2>
-                        <ul class="list list__horizontal">
-                            <li class="list_item">
-                                <a class="list_link icon-link icon-link__right"
-                                   href="interactive/"
-                                   target="_blank">
-                                    <span class="icon-link_text">Interactive</span>
-                                </a>
-                            </li>
-                            <li class="list_item">
-                                <a class="list_link icon-link icon-link__pdf"
-                                   href="http://files.consumerfinance.gov/f/strategic-plan.pdf">
-                                    <span class="icon-link_text">PDF</span>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                </section>
-            </div><!-- END .content_main -->
-
-        </div><!-- END .content_wrapper -->
-    </main><!-- END .content -->
-
-{% endblock content %}
+{% endblock %}
