--- a/contact-us/index.html
+++ b/contact-us/index.html
@@ -16,6 +16,7 @@
 
     {# Macros #}
     {% import "macros.html" as macros with context %}
+    {% import "contact-macro.html" as contact_macro with context %}
 
     <main class="content content__2-1 content__bleedbar" id="main" role="main">
 
