Office contact fixes

--- a/contact-us/contact-list.html
+++ b/contact-us/contact-list.html
@@ -64,7 +64,7 @@
             </button>
             <div class="expandable_content">
                 <div class="content-l">
-                    {{ contact_macro.display_contact(contact) }}
+                    {{ contact_macro.render(contact) }}
                 </div><!-- END .content-l -->
             </div><!-- END .expandable_content -->
         </article><!-- END .expandable -->
