--- a/doing-business-with-us/_smbiz-block.html
+++ b/doing-business-with-us/_smbiz-block.html
@@ -6,8 +6,7 @@
         women, minorities, and small businesses.
     </p>
     <a class="jump-link jump-link__right" href="/doing-business-with-us/small-businesses/">
-        <span class="jump-link_text">
-            Learn about our work with small, women-owned, and minority-owned businesses.
-        </span>
+        <span class="jump-link_text">Learn about our work with small, women-owned, and minority-owned
+            businesses.</span>
     </a>
 </section>
