--- a/doing-business-with-us/future-requests/index.html
+++ b/doing-business-with-us/future-requests/index.html
@@ -25,7 +25,7 @@
     <p class="short-desc">
         <a class="icon-link icon-link__external-link"
            href="https://www.fbo.gov/?s=agency&mode=form&tab=notices&id=e4a0c57cfb98ca60165469a7f9a778a0">
-            Find current openings at FedBizOpps.
+            <span class="icon-link_text">Find current openings at FedBizOpps.</span>
         </a>
         The needs below are forecasted, not current. Our fiscal year starts in October, so, for example,
         FY2015 Q1 is October–December 2014.
