--- a/doing-business-with-us/index.html
+++ b/doing-business-with-us/index.html
@@ -38,9 +38,8 @@
                     first register with SAM.
                 </p>
                 <a class="jump-link jump-link__external-link" href="https://www.sam.gov/">
-                    <span class="jump-link_text">
-                        Register with the System of Award Management at SAM.gov
-                    </span>
+                    <span class="jump-link_text">Register with the System of Award Management at
+                        SAM.gov</span>
                 </a>
             </div>
             <div class="content-l_col content-l_col-1-3">
@@ -54,9 +53,7 @@
                 </p>
                 <a class="jump-link jump-link__external-link"
                    href="https://www.fbo.gov/?s=agency&mode=form&tab=notices&id=e4a0c57cfb98ca60165469a7f9a778a0">
-                    <span class="jump-link_text">
-                        See our current procurement requests on FBO.gov
-                    </span>
+                    <span class="jump-link_text">See our current procurement requests on FBO.gov</span>
                 </a>
             </div>
             <div class="content-l_col content-l_col-1-3">
@@ -68,9 +65,8 @@
                     We publish a list of any significant vendor services we expect to need in the near future.
                 </p>
                 <a class="jump-link jump-link__right" href="future-requests/">
-                    <span class="jump-link_text">
-                        See a timetable of expected future procurement opportunities
-                    </span>
+                    <span class="jump-link_text">See a timetable of expected future procurement
+                        opportunities</span>
                 </a>
             </div>
         </div>
@@ -99,9 +95,8 @@
                 these businesses.
             </p>
             <a class="jump-link jump-link__right" href="small-businesses/">
-                <span class="jump-link_text">
-                    More information for small, women-owned, and minority-owned businesses
-                </span>
+                <span class="jump-link_text">More information for small, women-owned, and minority-owned
+                    businesses</span>
             </a>
         </section>
 
