--- a/doing-business-with-us/small-businesses/index.html
+++ b/doing-business-with-us/small-businesses/index.html
@@ -37,25 +37,19 @@
                 <li class="list_item">
                     <a class="list_link icon-link icon-link__before icon-link__pdf"
                        href="http://files.consumerfinance.gov/f/201305_cfpb_Small-business-guide.pdf">
-                        <span class="icon-link_text">
-                            Read our small business guidelines
-                        </span>
+                        <span class="icon-link_text">Read our small business guidelines</span>
                     </a>
                 </li>
                 <li class="list_item">
                     <a class="list_link icon-link icon-link__before icon-link__pdf"
                        href="http://files.consumerfinance.gov/f/201310_cfpb_sb-intake-form.pdf">
-                        <span class="icon-link_text">
-                            Complete our small business intake form
-                        </span>
+                        <span class="icon-link_text">Complete our small business intake form</span>
                     </a>
                 </li>
                 <li class="list_item">
-                    <a class="list_link icon-link icon-link__before icon-link__pdf"
-                       href="http://files.consumerfinance.gov/f/201305_cfpb_Small-business-guide.pdf">
-                        <span class="icon-link_text">
-                            Info for women- and minority-owned businesses (LINK NEEDED)
-                        </span>
+                    <a class="list_link icon-link icon-link__before icon-link__pdf" href="#">
+                        <span class="icon-link_text">Info for women- and minority-owned businesses
+                            (LINK NEEDED)</span>
                     </a>
                 </li>
             </ul>
@@ -68,9 +62,7 @@
                 Registration is free.
             </p>
             <a class="jump-link jump-link__external-link" href="https://www.sam.gov/">
-                <span class="jump-link_text">
-                    Register with the System for Award Management at SAM.gov
-                </span>
+                <span class="jump-link_text">Register with the System for Award Management at SAM.gov</span>
             </a>
         </div>
 
