--- a/contact-us/mailing-addresses.html
+++ b/contact-us/mailing-addresses.html
@@ -2,7 +2,7 @@
 {% set administrative_offices = get_document('contact', 'administrative-offices') %}
 {% set consumer_contact_center = get_document('contact', 'consumer-contact-center') %}
 
-<section class="block u-mt0 content-l">
+<section class="block u-mt0 content-l content-l__sidebar">
 
     <h1 class="h3 content-l_col content-l_col__stack-on-cols content-l_col-1-2">
         Mailing addresses
@@ -25,7 +25,7 @@
     </figure>
     {% endif %}
 
-    <div class="content-l_col content-l_col__stack-on-cols content-l_col-1-2">
+    <div class="content-l_col content-l_col-1-2">
         <h2 class="h5">
             {{ administrative_offices.title }}
         </h2>
