--- a/doing-business-with-us/_process-future-footer.html
+++ b/doing-business-with-us/_process-future-footer.html
@@ -1,5 +1,5 @@
 
-<div class="block content-l">
+<div class="block content-l content-l__main">
     {% include "_process-block.html" %}
     {% include "_future-block.html" %}
 </div>
