--- a/doing-business-with-us/index.html
+++ b/doing-business-with-us/index.html
@@ -25,7 +25,7 @@
 
     <section class="block block__bg block__border-top block__border-bottom block__flush-sides">
         <h1 class="h2">Get started</h1>
-        <div class="content-l">
+        <div class="content-l content-l__main">
             <div class="content-l_col content-l_col-1-3">
                 <h2 class="h4">
                     <span class="step-slug char-icon char-icon__1">Step one</span>
@@ -72,7 +72,7 @@
         </div>
     </section>
     
-    <div class="block content-l">
+    <div class="block content-l content-l__main">
 
         <section class="content-l_col content-l_col-1-2">
             <h1 class="h3">Existing and past service contracts</h1>
