--- a/doing-business-with-us/small-businesses/index.html
+++ b/doing-business-with-us/small-businesses/index.html
@@ -26,7 +26,7 @@
         <a href="/budget/">see our budget and strategy</a>.
     </p>
 
-    <div class="block content-l">
+    <div class="block content-l content-l__main">
 
         <div class="content-l_col
                     content-l_col-1-2">
