--- a/newsroom/press-resources/index.html
+++ b/newsroom/press-resources/index.html
@@ -44,7 +44,7 @@
             </li>
         </ul>
 
-        <div class="press-contacts_people content-l">
+        <div class="press-contacts_people content-l content-l__main">
 
             <section class="contact-person content-l_col-1-2">
                 <h1 class="contact-person_name">Jen Howard</h1>
@@ -134,7 +134,7 @@
             American consumers. The CFPB works through six divisions, each headed by an
             associate director.</p>
 
-        <div class="content-l">
+        <div class="content-l content-l__main">
 
             <section class="contact-person contact-person__director content-l_col-1-2">
                 <img class="contact-person_photo"
@@ -207,7 +207,7 @@
 
         <h1 class="press-section_title press-logo_title">Logo and usage</h1>
 
-        <div class="content-l">
+        <div class="content-l content-l__main">
 
             <p class="press-section_intro press-logo_intro content-l_col-2-3">
                 The CFPB logo was designed to symbolize vigilance, transparency, and
@@ -230,7 +230,7 @@
     </section><!-- END .press-section.press-logo -->
 
     <aside class="block block__bg block__flush-sides u-mb0">
-        <div class="content-l">
+        <div class="content-l content-l__main">
             <section class="content-l_col content-l_col-1-2">
                 <h1 class="header-slug">
                     <span class="header-slug_inner">
