--- a/the-bureau/bureau-structure/index.html
+++ b/the-bureau/bureau-structure/index.html
@@ -114,7 +114,7 @@
     </div>
     
     <aside class="block block__padded-top block__padded-bottom block__border-top">
-        <div class="content-l">
+        <div class="content-l content-l__main">
             <div class="content-l_col content-l_col-1-2">
                 <h2 class="h3">Download a copy</h2>
                 <p>
