--- a/the-bureau/index.html
+++ b/the-bureau/index.html
@@ -118,7 +118,7 @@
         <h1 class="h2">CFPB leadership</h1>
         <p class="short-desc">In January of 2012, President Barack Obama appointed Rich Cordray to be the first Director of the CFPB.</p>
         
-         <div class="block block__sub content-l u-hide-on-mobile">
+         <div class="block block__sub content-l content-l__main u-hide-on-mobile">
             <section class="content-l_col-1-2">
                 <div class="media bureau-bio">
                     <div class="media_image-container">
