--- a/contact-us/index.html
+++ b/contact-us/index.html
@@ -13,7 +13,7 @@
     <div class="wrapper">
         <section class="content_intro">
             <h1>Contact us</h1>
-            <div class="content-l">
+            <div class="content-l content-l__full">
                 <section class="content-l_col content-l_col-1-2">
                     {% include "general-inqueries.html" %}
                 </section>
