--- a/newsroom/index.html
+++ b/newsroom/index.html
@@ -38,7 +38,7 @@
                     Stay informed
                 </span>
             </h1>
-            <div class="content-l">
+            <div class="content-l content-l__main">
                 <div class="block__sub content-l_col content-l_col-1-2">
                     <p class="short-desc">
                         Subscribe to our email newsletter. We will update you on new newsroom updates.
@@ -53,7 +53,7 @@
             </div>
         </section>
         <div class="block u-mb0 block__flush-sides block__bg">
-            <div class="content-l">
+            <div class="content-l content-l__main">
                 <section class="block u-mt0 content-l_col content-l_col-1-2">
                     {% import "related-links.html" as related_links %}
                     {{ related_links.render(view.related_links) }}
