--- a/offices/_offices-index.html
+++ b/offices/_offices-index.html
@@ -24,7 +24,7 @@
     {% endif %}
 
     <section class="block block__flush-top
-                    {{- ' content-l content-l__large-gutters' if office.intro_subscribe_form -}}">
+                    {{- 'content-l content-l__main content-l__large-gutters' if office.intro_subscribe_form -}}">
         {% if office.intro_text %}
         <section class="office_intro 
                         {{- ' content-l_col content-l_col-1-2' if office.intro_subscribe_form -}}">
@@ -48,7 +48,7 @@
         {% if top_story.top_story_head %}
         <h1 class="h3">{{ top_story.top_story_head | safe }}</h1>
         {% endif %}
-        <div class="content-l content-l__large-gutters">
+        <div class="content-l content-l__main content-l__large-gutters">
             {% if top_story.top_story_desc %}
             <div class="content-l_col content-l_col-1-2">
                 <p class="short-desc">{{ top_story.top_story_desc | safe }}</p>
@@ -108,7 +108,7 @@
         <h1 class="h2">
             Our Work
         </h1>
-        <div class="content-l content-l__large-gutters expandables-group">
+        <div class="content-l content-l__main content-l__large-gutters expandables-group">
         {% for initiative in initiatives %}
             <div class="office_initiative
                         expandable 
@@ -187,7 +187,7 @@
             {% if contact.sitewide_desc %}
             <p class="short-desc">{{ contact.sitewide_desc }}</p>
             {% endif %}
-            <div class="content-l content-l__large-gutters">
+            <div class="content-l content-l__main content-l__large-gutters">
                 <div class="content-l_col content-l_col-1">
                     <h2 class="h5">{{ contact.title }}</h2>
                 </div>
