--- a/offices/_offices-single.html
+++ b/offices/_offices-single.html
@@ -31,7 +31,7 @@
     
     {% if initiative.subinitiatives %}
     <section class="block block__padded-top block__border-top block__flush-bottom">
-        <div class="content-l">
+        <div class="content-l content-l__main">
             {% for subinitiative in initiative.subinitiatives %}
             <!-- TODO: link header styles -->
             <div class="initiative_topic block__sub block__flush-top
