--- a/the-bureau/about-rich-cordray/index.html
+++ b/the-bureau/about-rich-cordray/index.html
@@ -47,7 +47,7 @@
     <section class="block
                     block__padded-top
                     block__border-top">
-        <div class="content-l">
+        <div class="content-l content-l__main">
             <div class="content-l_col content-l_col-1-2">
                 <div class="media">
                     <div class="media_image-container
@@ -97,7 +97,7 @@
             <h1 class="h2">
                 More information about Richard Cordray
             </h1>
-            <div class="content-l">
+            <div class="content-l content-l__main">
                 <div class="content-l_col content-l_col-1-3">
                     <h2 class="h5">
                         <span class="cf-icon cf-icon-newspaper"></span>
@@ -142,7 +142,7 @@
         <div class="block
                     block__padded-top
                     block__border-top">
-            <div class="content-l content-l__large-gutters">
+            <div class="content-l content-l__main content-l__large-gutters">
                 <section class="content-l_col content-l_col-1-2">
                     <h1 class="h2">
                         Cordray’s Corner
