--- a/the-bureau/about-steve-antonakes/index.html
+++ b/the-bureau/about-steve-antonakes/index.html
@@ -43,7 +43,7 @@
     </div>
     
     <section class="block block__padded-top block__padded-bottom block__border-top u-hide-on-mobile">
-        <div class="content-l">
+        <div class="content-l content-l__main">
             <div class="content-l_col content-l_col-1-2">
                 <div class="media">
                     <div class="media_image-container media_image-container__wide-margin">
@@ -83,7 +83,7 @@
             <h1 class="h2">
                 More information about Steve Antonakes
             </h1>
-            <div class="content-l">
+            <div class="content-l content-l__main">
                 <div class="content-l_col content-l_col-1-3">
                     <h2 class="h5">
                         <span class="cf-icon cf-icon-newspaper"></span>
