--- a/the-bureau/history/index.html
+++ b/the-bureau/history/index.html
@@ -34,7 +34,7 @@
 {% for section in sections %}
 
     <section class="block block__padded-top block__border-top">
-        <div class="content-l">
+        <div class="content-l content-l__main">
             <div class="content-l_col content-l_col-2-3">
                 <h1 class="h2">{{ section.title|safe }}</h1>
                 <p class="short-desc">
