--- a/the-bureau/leadership-calendar/index.html
+++ b/the-bureau/leadership-calendar/index.html
@@ -80,7 +80,7 @@
     </section>
 
     <aside class="block u-mb0 block__flush-sides block__bg">
-        <div class="content-l">
+        <div class="content-l content-l__main">
             <div class="content-l_col content-l_col-1-2">
                 <h1 class="header-slug">
                     <span class="header-slug_inner">
