--- a/doing-business-with-us/small-businesses/index.html
+++ b/doing-business-with-us/small-businesses/index.html
@@ -47,9 +47,9 @@
                     </a>
                 </li>
                 <li class="list_item">
-                    <a class="list_link icon-link icon-link__before icon-link__pdf" href="#">
-                        <span class="icon-link_text">Info for women- and minority-owned businesses
-                            (LINK NEEDED)</span>
+                    <a class="list_link icon-link icon-link__before icon-link__pdf"
+                       href="http://files.consumerfinance.gov/f/201310_cfpb_omwi_opportunities_trifold_final.pdf">
+                        <span class="icon-link_text">Info for women- and minority-owned businesses</span>
                     </a>
                 </li>
             </ul>
