Removes some missed instances of content-l_col__stack-on-cols.

--- a/contact-us/promoted-contacts.html
+++ b/contact-us/promoted-contacts.html
@@ -5,7 +5,7 @@
 
 <div class="block u-mb0 content-l content-l__sidebar">
     
-    <section class="block content-l_col content-l_col__stack-on-cols content-l_col-1-2">
+    <section class="block content-l_col content-l_col-1-2">
         <h1 class="h5">
             {{ accessibility_feedback.title }}
         </h1>
@@ -21,7 +21,7 @@
     {%- endif %}
     </section>
 
-    <section class="block content-l_col content-l_col__stack-on-cols content-l_col-1-2">
+    <section class="block content-l_col content-l_col-1-2">
         <h1 class="h5">
             {{ whistleblowers.title }}
         </h1>
@@ -52,7 +52,7 @@
     {%- endif %}
     </section>
 
-    <section class="block content-l_col content-l_col__stack-on-cols content-l_col-1-2">
+    <section class="block content-l_col content-l_col-1-2">
         <h1 class="h5">
             {{ tribal_consultation.title }}
         </h1>
