--- a/contact-us/mailing-addresses.html
+++ b/contact-us/mailing-addresses.html
@@ -4,7 +4,7 @@
 
 <section class="block u-mt0 content-l content-l__sidebar">
 
-    <h1 class="h3 content-l_col content-l_col__stack-on-cols content-l_col-1-2">
+    <h1 class="h3 content-l_col content-l_col-1-2">
         Mailing addresses
     </h1>
 
@@ -18,7 +18,7 @@
            administrative_offices.city + ' ' +
            administrative_offices.state + ' ' +
            administrative_offices.zip_code)|urlencode %}
-    <figure class="content-l_col content-l_col__stack-on-cols content-l_col-1-2 figure__bordered contact-us-map">
+    <figure class="content-l_col content-l_col-1-2 figure__bordered u-mt0 u-mb0 contact-us-map">
         <a href="https://www.google.com/maps/place/{{ administrative_offices_map }}">
             <img src="http://maps.googleapis.com/maps/api/staticmap?zoom=16&size=330x250&markers=color:red%7C{{ administrative_offices_map }}&scale=2" alt="">
         </a>
