Update bureau structure links. Add appropriate icon modifiers to bureau structure jump links. Absolutely position :before icons at mobile sizes for jump-link__before. Fix budget index page list jump links.

--- a/the-bureau/about-rich-cordray/index.html
+++ b/the-bureau/about-rich-cordray/index.html
@@ -106,7 +106,7 @@
                     <p class="short-desc">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita id minima ut nulla.
                     </p>
-                    <a class="jump-link"
+                    <a class="jump-link jump-link__right"
                        href="/newsroom/?filter_author=Richard+Cordray">
                         Read news about the director
                     </a>
@@ -119,7 +119,7 @@
                     <p class="short-desc">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita id minima ut nulla.
                     </p>
-                    <a href="/blog/?filter_author=Richard+Cordray" class="jump-link">
+                    <a href="/blog/?filter_author=Richard+Cordray" class="jump-link jump-link__right">
                         Blogs with the director
                     </a>
                 </div>
@@ -131,7 +131,7 @@
                     <p class="short-desc">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita id minima ut nulla.
                     </p>
-                    <a class="jump-link"
+                    <a class="jump-link jump-link__right"
                        href="{{ vars.path + 'leadership-calendar/' }}">
                         View Director Cordray's calendar
                     </a>
@@ -172,7 +172,7 @@
                     <p class="short-desc short-desc__large">
                         In January of 2012, President Barack Obama appointed Rich Cordray to be the first Director of the CFPB.
                     </p>
-                    <a class="jump-link"
+                    <a class="jump-link jump-link__right"
                        href="{{ vars.path + 'history/' }}">
                         Learn more about our history
                     </a>
@@ -188,13 +188,13 @@
             </h1>
             <ul class="list list__unstyled list__links">
                 <li class="list_item">
-                    <a class="list_link jump-link"
+                    <a class="list_link jump-link jump-link__right"
                        href="{{ vars.path + 'about-steve-antonakes/' }}">
                         Learn about Deputy Director Steven Antonkes
                     </a>
                 </li>
                 <li class="list_item">
-                    <a class="list_link jump-link"
+                    <a class="list_link jump-link jump-link__right"
                        href="{{ vars.path + 'bureau-structure/' }}">
                         Bureau organizational structure
                     </a>
