--- a/the-bureau/index.html
+++ b/the-bureau/index.html
@@ -127,7 +127,7 @@
                     <div class="media_body">
                         <h1 class="h6">Director</h1>
                         <h2 class="bureau-bio_name">Richard Cordray</h2>
-                        <a class="jump-link" href="about-rich-cordray">
+                        <a class="jump-link jump-link__right" href="about-rich-cordray">
                             Read bio
                         </a>
                     </div>
@@ -141,7 +141,7 @@
                     <div class="media_body">
                         <h1 class="h6">Deputy Director</h1>
                         <h2 class="bureau-bio_name">Steve Antonakes</h2>
-                        <a class="jump-link" href="about-steve-antonakes">
+                        <a class="jump-link jump-link__right" href="about-steve-antonakes">
                             Read bio
                         </a>
                     </div>
@@ -151,22 +151,22 @@
         
         <ul class="list list__links">
             <li class="list_item u-show-on-mobile">
-                <a class="list_link jump-link" href="about-rich-cordray">
+                <a class="list_link jump-link jump-link__right" href="about-rich-cordray">
                     Learn more about Director Richard Cordray
                 </a>
             </li>
             <li class="list_item u-show-on-mobile">
-                <a class="list_link jump-link" href="about-steve-antonakes">
+                <a class="list_link jump-link jump-link__right" href="about-steve-antonakes">
                     Learn more about Deputy Director Steve Antonakes
                 </a>
             </li>
             <li class="list_item">
-                <a class="list_link jump-link" href="leadership-calendar">
+                <a class="list_link jump-link jump-link__right" href="leadership-calendar">
                     View our leadership calendar
                 </a>
             </li>
             <li class="list_item">
-                <a class="list_link jump-link" href="bureau-structure">
+                <a class="list_link jump-link jump-link__right" href="bureau-structure">
                     Bureau organizational structure
                 </a>
             </li>
@@ -182,7 +182,7 @@
             <div class="media_body">
                 <div class="bureau-history_text">
                     <p class="h4">In January of 2012, President Barack Obama appointed Rich Cordray to be the first Director of the CFPB.</p>
-                    <a class="jump-link" href="history">
+                    <a class="jump-link jump-link__right" href="history">
                         Learn more about our history
                     </a>
                 </div>
