--- a/budget/index.html
+++ b/budget/index.html
@@ -35,12 +35,12 @@
                 </p>
                 <ul class="list list__links">
                     <li class="list_item">
-                        <a class="list_link jump-link__right" href="">
+                        <a class="list_link jump-link jump-link__right" href="">
                             View our budget
                         </a>
                     </li>
                     <li class="list_item">
-                        <a class="list_link jump-link__right" href="">
+                        <a class="list_link jump-link jump-link__right" href="">
                             2015 budget
                         </a>
                     </li>
@@ -53,12 +53,12 @@
                 </p>
                 <ul class="list list__links">
                     <li class="list_item">
-                        <a class="list_link jump-link__right" href="financial-report">
+                        <a class="list_link jump-link jump-link__right" href="financial-report">
                             View our financial report
                         </a>
                     </li>
                     <li class="list_item">
-                        <a class="list_link jump-link__right" href="">
+                        <a class="list_link jump-link jump-link__right" href="">
                             2014 financial budget
                         </a>
                     </li>
