--- a/the-bureau/about-steve-antonakes/index.html
+++ b/the-bureau/about-steve-antonakes/index.html
@@ -92,7 +92,7 @@
                     <p class="short-desc">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita id minima ut nulla.
                     </p>
-                    <a class="jump-link"
+                    <a class="jump-link jump-link__right"
                        href="/newsroom/?filter_author=Steve+Antonakes">
                         Read news about the deputy director
                     </a>
@@ -105,7 +105,7 @@
                     <p class="short-desc">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita id minima ut nulla.
                     </p>
-                    <a class="jump-link"
+                    <a class="jump-link jump-link__right"
                        href="/blog/?filter_author=Steve+Antonakes">
                         Blogs with the deputy director
                     </a>
@@ -118,7 +118,7 @@
                     <p class="short-desc">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita id minima ut nulla.
                     </p>
-                    <a class="jump-link"
+                    <a class="jump-link jump-link__right"
                        href="{{ vars.path + 'leadership-calendar/' }}">
                         View Deputy Director Antonakes' calendar
                     </a>
@@ -134,13 +134,13 @@
             </h1>
             <ul class="u-mb0 list list__unstyled list__links">
                 <li class="list_item">
-                    <a class="list_link jump-link"
+                    <a class="list_link jump-link jump-link__right"
                        href="{{ vars.path + 'about-rich-cordray/' }}">
                         Learn about Director Richard Cordray
                     </a>
                 </li>
                 <li class="list_item">
-                    <a class="list_link jump-link"
+                    <a class="list_link jump-link jump-link__right"
                        href="{{ vars.path + 'bureau-structure/' }}">
                         Bureau organizational structure
                     </a>
